Fix point sum issue at game end summary.